# Camera_Sensor_Security_System

./: .gitignore  README.md
Arduino/: README.md
Arduino/integrity_node/src/: main.cpp
C - Simulated Data Input & Logging/: SimulatedData.C
C - Simulated Data Input & Logging/data/: sensor_log.csv
C++  - Motion Sensor/: MotionSensor.cpp
C++OCV & Motion Sensor/: Recording.cpp
C++OCV Motion Sensor/: CMakeLists.txt  README.md  Recording.cpp  cmake_lists.txt  main.cpp
C++OCV Motion Sensor/Output Data/: Data1.csv  Data3.csv  Data4.csv  Data5.csv
C++_Motion_Sensor/: CMakeLists.txt
C++_Motion_Sensor/Output Data/: Data10.csv  Data11.csv  Data2.csv  Data6.csv  Data7.csv  Data8.csv  Data9.csv  MotionLog1.csv  MotionLog2.csv  MotionLog3.csv  MotionLog4.csv  MotionLog5.csv  MotionLog6.csv  MotionLog7.csv  MotionLog8.csv
C++_Motion_Sensor/src/: main.cpp  main_2Cams.cpp  main_2Cams_Threaded.cpp
CSV_SQL_DB_Compiler/: README.md
CSimDataInput+Logging/: SimulatedData.C
CSimDataInput+Logging/data/: sensor_log.csv
Docker/: README.MD  README.md
Java_Visual_Behavior_Logger/: README.md
Java_Visual_Behavior_Logger/Scripts/: run.ps1  run.sh
Java_Visual_Behavior_Logger/src/main/java/avl/: Main.java
Java_Visual_Behavior_Logger/src/main/java/avl/session/: SessionController.java
Java_Visual_Behavior_Logger/src/main/java/avl/util/: ConfigLoader.java
Python - OpenCV & LightLevel Sensor/: Webcam1.py
PythonOCV & LLVL Sensor/: LightLog.csv  Light_Level.py
PythonOCV & LLVL Sensor/Data/: LightLog1.csv
Python_Light_Level_Sensor/: Light_Level.py  Light_Level_2Cams.py  Light_Level_2Cams_Threading.py  README.md  Recording.py  Webcam1.py
Python_Light_Level_Sensor/Data/: LightLog10.csv  LightLog11.csv  LightLog12.csv  LightLog13.csv  LightLog14.csv  LightLog15.csv  LightLog16.csv  LightLog17.csv  LightLog2.csv  LightLog3.csv  LightLog4.csv  LightLog5.csv  LightLog6.csv  LightLog8.csv
Simulated Data Input  & Logging/C++SimDataInput+Logging/: Sim_Data.cpp
Simulated Data Input  & Logging/CSimDataInput+Logging/: SimulatedData.C
Simulated Data Input  & Logging/PythonSimDataInput+Logging/: Simulated_Data.py  sensor_log_python.csv
Simulated Data Input  & Logging/PythonSimDataInput+Logging/data/: sensor_log_python.csv
Simulated Data Input & Logging/C/: SimulatedData.C
Simulated Data Input & Logging/C++/: Sim_Data.cpp
Simulated Data Input & Logging/C++/data/: sensor_log_cpp.csv
Vision_Camera_Service/: README.md
